data/derived/comb/progs/unify/prog6586.ml.out
Characters 84-85:
  List.fold_left f base fs;;
                 ^
Error: This expression has type (('a -> 'b) -> 'c) -> ('a -> 'b) -> 'c
       but an expression was expected of type
         (('a -> 'b) -> 'c) -> ('a -> 'b) -> ('a -> 'b) -> 'c
       The type variable 'c occurs inside ('a -> 'b) -> 'c
